// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobTitle - Larger Devices renders the Job title Tooltip on larger devices 1`] = `
<DocumentFragment>
  <div
    class="sc-EHOje cZlyCb"
  >
    <div
      class="sc-bZQynM bJeBts"
      data-testid="Tooltip-context"
    >
      Contractual Title
    </div>
    <button
      aria-label="See contractual title, button"
      class="sc-bdVaJa Cwdme"
      data-testid="Tooltip"
    >
      <svg
        class="css-ny3roy"
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="a"
          maskUnits="userSpaceOnUse"
          style="mask-type: alpha;"
          width="16"
          x="0"
          y="0"
        >
          <path
            d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
            fill="currentcolor"
          />
          <path
            clip-rule="evenodd"
            d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
            fill="currentcolor"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#a)"
        >
          <path
            d="M0 0h16v16H0z"
            fill="currentcolor"
          />
        </g>
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`JobTitle - Smaller Devices renders the Job title Popover 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH byurlq"
  >
    <div
      class="sc-htpNat eLHUjT"
      data-testid="Popover-context"
    >
      <div
        class="sc-bxivhb hWtgEz"
      >
        <div>
          Contractual Title
        </div>
        <button
          class="sc-ifAKCX NVIZe"
          data-testid="close-button"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 14 14"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="#333333"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-label="See contractual title, button"
      class="sc-bdVaJa Cwdme"
      data-testid="Popover"
    >
      <svg
        class="css-ny3roy"
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="a"
          maskUnits="userSpaceOnUse"
          style="mask-type: alpha;"
          width="16"
          x="0"
          y="0"
        >
          <path
            d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
            fill="currentcolor"
          />
          <path
            clip-rule="evenodd"
            d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
            fill="currentcolor"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#a)"
        >
          <path
            d="M0 0h16v16H0z"
            fill="currentcolor"
          />
        </g>
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`JobTitlePopover Renders the Popover when clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH byurlq"
  >
    <div
      class="sc-htpNat hegnPT"
      data-testid="Popover-context"
    >
      <div
        class="sc-bxivhb hWtgEz"
      >
        <div>
          Contractual Title Popover
        </div>
        <button
          class="sc-ifAKCX NVIZe"
          data-testid="close-button"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 14 14"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="#333333"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-label="See contractual title, button"
      class="sc-bdVaJa Cwdme"
      data-testid="Popover"
    >
      <svg
        class="css-ny3roy"
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="a"
          maskUnits="userSpaceOnUse"
          style="mask-type: alpha;"
          width="16"
          x="0"
          y="0"
        >
          <path
            d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
            fill="currentcolor"
          />
          <path
            clip-rule="evenodd"
            d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
            fill="currentcolor"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#a)"
        >
          <path
            d="M0 0h16v16H0z"
            fill="currentcolor"
          />
        </g>
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`JobTitleTooltip Renders the tooltip when clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-EHOje cZlyCb"
  >
    <div
      class="sc-bZQynM ldWLbn"
      data-testid="Tooltip-context"
    >
      Contractual Title Tooltip
    </div>
    <button
      aria-label="See contractual title, button"
      class="sc-bdVaJa Cwdme"
      data-testid="Tooltip"
    >
      <svg
        class="css-ny3roy"
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="a"
          maskUnits="userSpaceOnUse"
          style="mask-type: alpha;"
          width="16"
          x="0"
          y="0"
        >
          <path
            d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
            fill="currentcolor"
          />
          <path
            clip-rule="evenodd"
            d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
            fill="currentcolor"
            fill-rule="evenodd"
          />
        </mask>
        <g
          mask="url(#a)"
        >
          <path
            d="M0 0h16v16H0z"
            fill="currentcolor"
          />
        </g>
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
